# GreenScreenVideotoAlphaPNGs

./: .gitignore  GIFGenerator.py  GreenVideotoAlphaPNGs.py  LICENSE  README.md  VideoGenerator.py  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py
.cursor/: mcp.json
TemplatesCutout/: TemplatesCutout.lsproj  lens_icon_template_photoshop.psd  project.data
TemplatesCutout/Public/Materials/: ground_grid.lsmat  touch_collision.lsmat
TemplatesCutout/Public/Scripts/: Touchaudio.js
lib/APNGLib_fix/: link.txt  setup.py
lib/APNGLib_fix/APNGLib/: APNGLib.cpp
src/greenscreen/: __init__.py  chroma.py  cli.py  convert.py  download.py  ffmpeg_util.py  frames.py  gif_pipeline.py  video_pipeline.py
tests/: test_chroma.py  test_cli_smoke.py
